force-app/main/default/objects/User/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Person</fullName>
            </value>
            <value>
                <fullName>Cashier</fullName>
            </value>
            <value>
                <fullName>Branch Manager</fullName>
            </value>
            <value>
                <fullName>Credit Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>